# athena-code

./: README.md
.github/workflows/: main.yml
description/config/: athena_drive_controllers.yaml
description/urdf/: UMDLoop_Rover2025_URDF.urdf  athena_drive.urdf.xacro  gps.xacro  imu.xacro
simulation/: CMakeLists.txt  package.xml
simulation/launch/: bridge.launch.py  bringup.launch.py  control.launch.py  gz_sim.launch.py  spawn.launch.py
